# FlowTimer

./: .gitignore  Cargo.toml  TASKS.md  app.md
locales/: en-US.ftl  ru-RU.ftl
src/: config.rs  lib.rs  main.rs  timer.rs  ui.rs  utils.rs
