[package]
name = "FlowTimer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.0", default-features = false, features = ["default_fonts", "persistence", "wgpu"] }
fluent-bundle = "0.16.0"
unic-langid = { version = "0.9.6", features = ["serde", "unic-langid-macros", "likelysubtags"] }
