[package]
name = "flow_timer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.0", default-features = false, features = ["default_fonts", "persistence", "glow"] }
fluent-bundle = "0.16.0"
unic-langid = { version = "0.9.6", features = ["serde", "unic-langid-macros", "likelysubtags"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
